# esp32c6thingy

./: .gitignore  .gitmodules  CBOR Expressions.md  CMakeLists.txt  README.md  flashfs.sh  generate.py  interface.c.j2  interface.h.j2  messages.ccdl  partitions.csv  sdkconfig  sdkconfig.button  sdkconfig.dalibridge  sdkconfig.defaults  sdkconfig.old  sync.py
bridge/: package-lock.json  package.json
bridge/src/: helpers.ts  index.ts
firmware/: .gitignore  README.md  interface.json  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  dali_driver.h  idf_component.yml  lua_cbor.c  lua_crypto.c  lua_crypto.h  lua_dali.c  lua_dali.h  lua_digest.c  lua_log.c  lua_log.h  lua_openthread.c  lua_openthread.h  lua_system.c  lua_timer.c
hardware/lightswitch/: #auto_saved_files#  _autosave-lightswitch.kicad_sch  lightswitch.kicad_prl  lightswitch.kicad_pro  ~lightswitch.kicad_sch.lck
lua/: .gitignore  README.md  ca.key  flashfs.sh  openssl.conf  sync.py
lua/button/: button.lua  init.lua
lua/dali/: dali.lua  init.lua
lua/devices/fdbf:1afc:5480:1:8a08:4ae9:e400:964d/: cert.pem
lua/shared/: async.lua  ca.pem  coap.lua  default_handlers.lua  helpers.lua  init.lua  init_ot_tmpl.lua  manifest.yml
main/: CMakeLists.txt  Kconfig.projbuild  aspect_brightness.h  aspect_button.h  aspect_ccpeed_device.h  aspect_on_off.h  ast.c  ast.h  cbor_expression.c  cbor_helpers.c  cbor_helpers.h  ccpeed_err.h  coap_server_example_main.c  connect.c  connect.h  dali.c  dali.h  dali_device.c  dali_device.h  dali_driver.c  dali_provider.c  dali_provider.h  dali_rmt_encoder.c  dali_rmt_encoder.h  device.c  device.h  gpio_input_provider.c  gpio_input_provider.h  idf_component.yml  interface_brightness.c  interface_brightness.h  interface_device.c  interface_device.h  interface_hvac.c  interface_hvac.h  interface_pushbutton.c  interface_pushbutton.h  interface_switch.c  interface_switch.h  interface_temperature.c  (+29 more)
monitor/: package-lock.json  package.json
monitor/public/: index.html
monitor/src/: .prettierrc  App.css  App.tsx
monitor/src/components/: device_files.tsx  device_info.tsx  device_info_small.tsx  file_editor.tsx
monitor/src/data/: device.ts  reset_reason.ts
monitor/src/layouts/: main_layout.tsx
monitor/src/routes/: device_route.tsx  file_route.tsx
scripts/: async.lua  await.lua  button.lua  button_actions.lua  coap.lua  dali.lua  dali_bus.lua  default_handlers.lua  devices.lua  event_loop.lua  fdbf_1afc_5480_1_8a08_4ae9_e400_964d.lua  file_server.lua  helpers.lua  init.lua  init_buttons.lua  init_dali_bridge.lua  manifest.yml  router.lua  system_resources.lua
